--- a/tool/aframe-tinkering-1.html
+++ b/tool/aframe-tinkering-1.html
@@ -4,14 +4,14 @@
   </head>
   <body>
     <a-scene>
-      <a-torus-knot color="#B84A39" arc="180" p="2" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
-      <a-torus-knot color="#B84A39" arc="180" p="3" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
-      <a-torus-knot color="#B84A39" arc="180" p="4" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
-      <a-torus-knot color="#B84A39" arc="180" p="5" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
-      <a-torus-knot color="#B84A39" arc="180" p="6" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
-      <a-torus-knot color="#B84A39" arc="180" p="2" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
-      <a-torus-knot color="#B84A39" arc="180" p="7" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
-      <a-torus-knot color="#B84A39" arc="180" p="500" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
+      <a-torus-knot position="0 0 -10" color="#B84A39" arc="180" p="2" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
+      <a-torus-knot position="0 0 -9" color="#B84A39" arc="180" p="3" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
+      <a-torus-knot position="0 0 -8" color="#B84A39" arc="180" p="4" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
+      <a-torus-knot position="0 0 -7" color="#B84A39" arc="180" p="5" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
+      <a-torus-knot position="0 0 -6" color="#B84A39" arc="180" p="6" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
+      <a-torus-knot position="0 0 -5" color="#B84A39" arc="180" p="2" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
+      <a-torus-knot position="0 0 -4" color="#B84A39" arc="180" p="7" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
+      <a-torus-knot position="0 0 -3" color="#B84A39" arc="180" p="500" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
 
 
 
