--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <div class="container-fluid section text-center fw" id="context">
                 <h2><strong>Context</strong></h2>
- <p>Animation was</p>
+ <p>Animation was a art that can make a still image to a moving image, also animation can happens when a object was moving fast such as paper animation </p>
 
 
 
