--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <!-- Required meta tags -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Single+Day&display=swap" rel="stylesheet">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -58,7 +61,7 @@
 
             <div class="container-fluid section text-center fw" id="context">
                 <h2><strong>Context</strong></h2>
- <p>Animation was a art that can make a still image to a moving image, also animation can happens when a object was moving fast such as paper animation </p>
+ <h3>Animation was a art that can make a still image to a moving image, and animation can happens when a object was moving fast such as paper animation, also Animation is used for a wide range of purposes, including storytelling, entertainment, education, and even advertising. And </h3>
 
 
 
