--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 
             <div class="container-fluid section text-center fw" id="context">
                 <h2><strong>Context</strong></h2>
- <h3>Animation was a art that can make a still image to a moving image, and animation can happens when a object was moving fast such as paper animation, also Animation is used for a wide range of purposes, including storytelling, entertainment, education, and even advertising. And </h3>
+ <h3>Animation was a art that can make a still image to a moving image, and animation can happens when a object was moving fast such as paper animation, also Animation is used for a wide range of purposes, including storytelling, entertainment, education, and even advertising.</h3>
+ <img src="animation.jpg" alt="Description of image" width="300" height="200" style="float: left; margin-top: 80px;"> 
+
 
 
 
