--- a/index.html
+++ b/index.html
@@ -62,7 +62,27 @@
             <div class="container-fluid section text-center fw" id="context">
                 <h2><strong>Context</strong></h2>
  <h3>Animation was a art that can make a still image to a moving image, and animation can happens when a object was moving fast such as paper animation, also Animation is used for a wide range of purposes, including storytelling, entertainment, education, and even advertising.</h3>
- <img src="animation.jpg" alt="Description of image" width="300" height="200" style="float: left; margin-top: 80px;"> 
+ <div style="overflow: auto; margin-top: 90px;">
+ <img src="animation.jpg" alt="Description of image" width="300" height="200" style="float: left; margin-top: 90px;">
+ <h3 style="float: left; margin-top: 90px;">
+  Mickey Mouse and Tom and Jerry was a example of 2D hand drawn animation, each frame of
+ </h3>
+ <h3>their animation was draw by hand and it was 2D so it was called 2Dhand drawn animation.</h3>
+ <h3 style="float: left; margin-top: 90px;">
+  The movie Coco was a example of 3D animation and Wallace and Gromit was a example of Stop
+</h3>
+<h3>motion animation, it claymation it also a handmade animation</h3>
+</div>
+
+
+<h2 style="float: right; margin-top: 120px;margin-right: 30px;">
+  <strong>Existing technology</strong>
+</h2>
+
+
+
+
+
 
 
 
