--- a/index.html
+++ b/index.html
@@ -68,16 +68,34 @@
   Mickey Mouse and Tom and Jerry was a example of 2D hand drawn animation, each frame of
  </h3>
  <h3>their animation was draw by hand and it was 2D so it was called 2Dhand drawn animation.</h3>
- <h3 style="float: left; margin-top: 90px;">
+ <h3 style="float: left; margin-top: 40px;">
   The movie Coco was a example of 3D animation and Wallace and Gromit was a example of Stop
 </h3>
 <h3>motion animation, it claymation it also a handmade animation</h3>
 </div>
 
 
-<h2 style="float: right; margin-top: 120px;margin-right: 30px;">
-  <strong>Existing technology</strong>
-</h2>
+
+
+<div style="float: right; margin-top: 120px; margin-right: 20px; text-align: right;">
+  <h2><strong>Existing technology</strong></h2>
+  <div style="max-width: 800px;">
+    <h3>
+      The first technolgy was 2D Vector Animation this technology uses computer software to create scalable graphics based on mathematical equations, allowing for easy modification and movement of vector elements. And there is 3D Animation this technology involves creating and manipulating digital models in three dimensions, allowing for complex and realistic visuals. And also their is Hand Drawn Animation it a technolody that involves drawing each frame by hand to create the animation. And there was more existing techology in today world.
+    </h3>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
