--- a/index.html
+++ b/index.html
@@ -78,13 +78,34 @@
 
 
 <div style="float: right; margin-top: 120px; margin-right: 20px; text-align: right;">
+  <div style="overflow: auto; margin-top: 90px;">
+    <img src="hand.jpg" alt="Description of image" width="300" height="200" style="float: left;">
   <h2><strong>Existing technology</strong></h2>
   <div style="max-width: 800px;">
-    <h3>
+    <h3> make the text and image be un the bottom of existing technology
       The first technolgy was 2D Vector Animation this technology uses computer software to create scalable graphics based on mathematical equations, allowing for easy modification and movement of vector elements. And there is 3D Animation this technology involves creating and manipulating digital models in three dimensions, allowing for complex and realistic visuals. And also their is Hand Drawn Animation it a technolody that involves drawing each frame by hand to create the animation. And there was more existing techology in today world.
     </h3>
-  </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+
+<div style="float: right; margin-top: 120px; margin-left: 20px; text-align: left;">
+  <h2><strong>Idea for Future Technology</strong></h2>
+  <h3>The first idea was Automated Tasks, it a idea that AI can handle tasks like in-betweening frames, generating character movements, and even automating certain production aspects, freeing up animators for more creative work. And Hybrid Animation (2D & 3D) which combining 2D and 3D elements can lead to unique and compelling storytelling, offering more flexibility and visual appeal.</h3>
 </div>
+
+<div style="float: left; margin-top: 120px; margin-left: 800px; text-align: right;">
+  <h2>TOOL</h2>
+</div>
+
+
+
+
+
+
+
 
 
 
