--- a/index.html
+++ b/index.html
@@ -92,12 +92,14 @@
     </div>
 
 <div style="float: right; margin-top: 120px; margin-left: 20px; text-align: left;">
+  <img src="future.jpg" alt="Description of image" width="300" height="200" style="float: right;">
   <h2><strong>Idea for Future Technology</strong></h2>
   <h3>The first idea was Automated Tasks, it a idea that AI can handle tasks like in-betweening frames, generating character movements, and even automating certain production aspects, freeing up animators for more creative work. And Hybrid Animation (2D & 3D) which combining 2D and 3D elements can lead to unique and compelling storytelling, offering more flexibility and visual appeal.</h3>
 </div>
 
 <div style="float: left; margin-top: 120px; margin-left: 800px; text-align: right;">
   <h2>TOOL</h2>
+  <h3>The tool l use was Aframe, and l want to make a 3D animation with Aframe</h3>
 </div>
 
 
