--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 
 
   <h2>TOOL</h2>
-  <h3>The tool l use was Aframe, and l want to make a 3D animation with Aframe</h3>
+  <h3>The tool l use was Aframe, and l want to make a 3D animation with Aframe or maybe just create a VR experience</h3>
+  <div style="max-width: 500px;"></div>
   <img src="tool.png" alt="Description of image" width="300" height="200" style="float: left;">
 </div>
 
