--- a/index.html
+++ b/index.html
@@ -28,26 +28,23 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#animation">Animation</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                    <a class="nav-link active" aria-current="page" href="#context">Context</a>
                     </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link active" aria-current="page" href="#existing">Existing</a>
                   </li>
-                </ul>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#future">Future</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="https://www.adobe.com/express/create/animation">Link</a>
+                  </li>
+
+
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
@@ -65,11 +62,11 @@
  <div style="overflow: auto; margin-top: 90px;">
  <img src="animation.jpg" alt="Description of image" width="300" height="200" style="float: left; margin-top: 90px;">
  <h3 style="float: left; margin-top: 90px;">
-  Mickey Mouse and Tom and Jerry was a example of 2D hand drawn animation, each frame of
+   Mickey Mouse and Tom and Jerry was a example of 2D hand drawn animation, each frame of
  </h3>
  <h3>their animation was draw by hand and it was 2D so it was called 2Dhand drawn animation.</h3>
  <h3 style="float: left; margin-top: 40px;">
-  The movie Coco was a example of 3D animation and Wallace and Gromit was a example of Stop
+   The movie Coco was a example of 3D animation and Wallace and Gromit was a example of Stop
 </h3>
 <h3>motion animation, it claymation it also a handmade animation</h3>
 </div>
@@ -77,13 +74,12 @@
 
 
 
-<div style="float: right; margin-top: 120px; margin-right: 20px; text-align: right;">
+<div style="float: right; margin-top: 120px; margin-right: 20px; text-align: right; id="existing" ;>
   <div style="overflow: auto; margin-top: 90px;">
     <img src="hand.jpg" alt="Description of image" width="300" height="200" style="float: left;">
   <h2><strong>Existing technology</strong></h2>
   <div style="max-width: 800px;">
-    <h3> make the text and image be un the bottom of existing technology
-      The first technolgy was 2D Vector Animation this technology uses computer software to create scalable graphics based on mathematical equations, allowing for easy modification and movement of vector elements. And there is 3D Animation this technology involves creating and manipulating digital models in three dimensions, allowing for complex and realistic visuals. And also their is Hand Drawn Animation it a technolody that involves drawing each frame by hand to create the animation. And there was more existing techology in today world.
+    <h3> The first technolgy was 2D Vector Animation this technology uses computer software to create scalable graphics based on mathematical equations, allowing for easy modification and movement of vector elements. And there is 3D Animation this technology involves creating and manipulating digital models in three dimensions, allowing for complex and realistic visuals. And also their is Hand Drawn Animation it a technolody that involves drawing each frame by hand to create the animation. And there was more existing techology in today world.
     </h3>
     </div>
     </div>
@@ -91,20 +87,36 @@
     </div>
     </div>
 
-<div style="float: right; margin-top: 120px; margin-left: 20px; text-align: left;">
-  <img src="future.jpg" alt="Description of image" width="300" height="200" style="float: right;">
+<div style="float: right; margin-top: 120px; margin-left: 20px; text-align: left;></div>
+</li>">
+  <img src="future.jpg" alt="Description of image" width="300" height="200" style="float: right; id="future"">
   <h2><strong>Idea for Future Technology</strong></h2>
+  <div style="max-width: 800px;"></div>
   <h3>The first idea was Automated Tasks, it a idea that AI can handle tasks like in-betweening frames, generating character movements, and even automating certain production aspects, freeing up animators for more creative work. And Hybrid Animation (2D & 3D) which combining 2D and 3D elements can lead to unique and compelling storytelling, offering more flexibility and visual appeal.</h3>
 </div>
+
+
 
 <div style="float: right; margin-top: 120px; margin-right: 40px; text-align: right;">
 
 
-  <h2>TOOL</h2>
-  <h3>The tool l use was Aframe, and l want to make a 3D animation with Aframe or maybe just create a VR experience</h3>
-  <div style="max-width: 500px;"></div>
+  <h2>Tool</h2>
+  <h3>The tool l use was Aframe, and it can create 3D and WebXR scenes using HTML also use Aframe because l want to create a 3D animation with Aframe or maybe just create a VR Experiences</h3>
+  <div style="max-width: 500px;">
   <img src="tool.png" alt="Description of image" width="300" height="200" style="float: left;">
 </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
