--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- HTML -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+          
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -40,6 +40,10 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#future">Future</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#tool">Tool</a>
+                  </li>
+
                   <li class="nav-item">
                     <a class="nav-link" href="https://www.adobe.com/express/create/animation">Link</a>
                   </li>
@@ -74,7 +78,7 @@
 
 
 
-<div style="float: right; margin-top: 120px; margin-right: 20px; text-align: right; id="existing" ;>
+<div id="existing" style="float: right; margin-top: 120px; margin-right: 20px; text-align: right" ;>
   <div style="overflow: auto; margin-top: 90px;">
     <img src="hand.jpg" alt="Description of image" width="300" height="200" style="float: left;">
   <h2><strong>Existing technology</strong></h2>
@@ -84,10 +88,10 @@
     </div>
     </div>
     </div>
-    </div>
-    </div>
 
-<div style="float: right; margin-top: 120px; margin-left: 20px; text-align: left;></div>
+
+
+<div id="future" style="float: right; margin-top: 120px; margin-left: 20px; text-align: left;></div>
 </li>">
   <img src="future.jpg" alt="Description of image" width="300" height="200" style="float: right; id="future"">
   <h2><strong>Idea for Future Technology</strong></h2>
@@ -97,9 +101,7 @@
 
 
 
-<div style="float: right; margin-top: 120px; margin-right: 40px; text-align: right;">
-
-
+<div id="tool" style="float: right; margin-top: 120px; margin-right: 40px; text-align: right;">
   <h2>Tool</h2>
   <h3>The tool l use was Aframe, and it can create 3D and WebXR scenes using HTML also use Aframe because l want to create a 3D animation with Aframe or maybe just create a VR Experiences</h3>
   <div style="max-width: 500px;">
@@ -107,6 +109,40 @@
 </div>
 </div>
 
+
+
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary" >
+  <div class="container-fluid" >
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">s</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"></a>
+        </li>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container-fluid section text-center fw" id="animation1">
+            <h2><strong>Animation</strong></h2>
 
 
 
